--- a/.env.dev
+++ b/.env.dev
@@ -11,9 +11,9 @@ APP_SET_COOKIE_SAME_SITE=Lax
 
 # Database configuration
 DB_HOST=db
-DB_USER=experience
-DB_DATABASE=experience
-DB_PASSWORD=experience
+DB_USER=file_experience
+DB_DATABASE=file_experience
+DB_PASSWORD=file_experience
 # MikroORM and TypeORM
 # DB_PORT=5432
 # Mongoose
